// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumInput should render the PremiumInput view with 0 premium 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "lineHeight": 32,
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  >
    premium
    :
  </PeachText>
  <View
    style={
      {
        "height": 40,
        "marginLeft": 8,
      }
    }
  >
    <NumberInput
      icons={
        [
          [
            "percent",
            [Function],
          ],
        ]
      }
      inputStyle={
        {
          "textAlign": "right",
        }
      }
      onChange={[Function]}
      style={
        {
          "width": 96,
        }
      }
      value="0"
    />
  </View>
</View>
`;

exports[`PremiumInput should render the PremiumInput view with discount 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "lineHeight": 32,
        },
        {
          "color": "#F56522",
        },
      ]
    }
  >
    discount
    :
  </PeachText>
  <View
    style={
      {
        "height": 40,
        "marginLeft": 8,
      }
    }
  >
    <NumberInput
      icons={
        [
          [
            "percent",
            [Function],
          ],
        ]
      }
      inputStyle={
        {
          "textAlign": "right",
        }
      }
      onChange={[Function]}
      style={
        {
          "width": 96,
        }
      }
      value="-3.2"
    />
  </View>
</View>
`;

exports[`PremiumInput should render the PremiumInput view with premium 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <PeachText
    style={
      [
        {
          "lineHeight": 32,
        },
        {
          "color": "#05A85A",
        },
      ]
    }
  >
    premium
    :
  </PeachText>
  <View
    style={
      {
        "height": 40,
        "marginLeft": 8,
      }
    }
  >
    <NumberInput
      icons={
        [
          [
            "percent",
            [Function],
          ],
        ]
      }
      inputStyle={
        {
          "textAlign": "right",
        }
      }
      onChange={[Function]}
      style={
        {
          "width": 96,
        }
      }
      value="3.2"
    />
  </View>
</View>
`;
